@@ -26,27 +26,34 @@ import androidx.build.checkapi.KmpApiTaskConfig
 import androidx.build.checkapi.LibraryApiTaskConfig
 import androidx.build.checkapi.configureProjectForApiTasks
 import androidx.build.docs.CheckTipOfTreeDocsTask.Companion.setUpCheckDocsTask
+import androidx.build.gitclient.getHeadShaProvider
 import androidx.build.gradle.isRoot
-import androidx.build.license.configureExternalDependencyLicenseCheck
-import androidx.build.resources.CopyPublicResourcesDirTask
+import androidx.build.kythe.configureProjectForKzipTasks
+import androidx.build.license.addLicensesToPublishedArtifacts
 import androidx.build.resources.configurePublicResourcesStub
 import androidx.build.sbom.configureSbomPublishing
 import androidx.build.sbom.validateAllArchiveInputsRecognized
+import androidx.build.sources.configureMultiplatformSourcesForAndroid
+import androidx.build.sources.configureSourceJarForAndroid
+import androidx.build.sources.configureSourceJarForJava
+import androidx.build.sources.configureSourceJarForMultiplatform
+import androidx.build.sources.registerValidateMultiplatformSourceSetNamingTask
 import androidx.build.studio.StudioTask
-import androidx.build.testConfiguration.ModuleInfoGenerator
-import androidx.build.testConfiguration.TestModule
 import androidx.build.testConfiguration.addAppApkToTestConfigGeneration
+import androidx.build.testConfiguration.addToModuleInfo
 import androidx.build.testConfiguration.configureTestConfigGeneration
 import androidx.build.uptodatedness.TaskUpToDateValidator
 import androidx.build.uptodatedness.cacheEvenIfNoOutputs
 import com.android.build.api.artifact.SingleArtifact
+import com.android.build.api.attributes.BuildTypeAttr
+import com.android.build.api.dsl.AarMetadata
 import com.android.build.api.dsl.ApplicationExtension
-import com.android.build.api.dsl.CommonExtension
-import com.android.build.api.dsl.KotlinMultiplatformAndroidTarget
-import com.android.build.api.dsl.KotlinMultiplatformAndroidTestOnDeviceCompilation
-import com.android.build.api.dsl.KotlinMultiplatformAndroidTestOnJvmCompilation
+import com.android.build.api.dsl.KotlinMultiplatformAndroidDeviceTestCompilation
+import com.android.build.api.dsl.KotlinMultiplatformAndroidHostTestCompilation
+import com.android.build.api.dsl.KotlinMultiplatformAndroidLibraryTarget
 import com.android.build.api.dsl.LibraryExtension
 import com.android.build.api.dsl.PrivacySandboxSdkExtension
+import com.android.build.api.dsl.TestBuildType
 import com.android.build.api.dsl.TestExtension
 import com.android.build.api.variant.AndroidComponentsExtension
 import com.android.build.api.variant.ApplicationAndroidComponentsExtension
@@ -54,19 +61,21 @@ import com.android.build.api.variant.HasDeviceTests
 import com.android.build.api.variant.HasUnitTestBuilder
 import com.android.build.api.variant.KotlinMultiplatformAndroidComponentsExtension
 import com.android.build.api.variant.LibraryAndroidComponentsExtension
+import com.android.build.api.variant.LibraryVariant
+import com.android.build.api.variant.LibraryVariantBuilder
 import com.android.build.api.variant.Variant
 import com.android.build.gradle.AppPlugin
 import com.android.build.gradle.LibraryPlugin
 import com.android.build.gradle.TestPlugin
 import com.android.build.gradle.api.KotlinMultiplatformAndroidPlugin
 import com.android.build.gradle.api.PrivacySandboxSdkPlugin
-import com.android.build.gradle.tasks.factory.AndroidUnitTest
-import com.android.utils.appendCapitalized
+import com.google.devtools.ksp.gradle.KspExtension
+import com.google.devtools.ksp.gradle.KspGradleSubplugin
+import com.google.protobuf.gradle.ProtobufExtension
+import com.google.protobuf.gradle.ProtobufPlugin
 import java.io.File
 import java.time.Duration
-import java.time.LocalDateTime
 import java.util.Locale
-import java.util.concurrent.ConcurrentHashMap
 import javax.inject.Inject
 import org.gradle.api.DefaultTask
 import org.gradle.api.GradleException
@@ -81,7 +90,9 @@ import org.gradle.api.artifacts.CacheableRule
 import org.gradle.api.artifacts.ComponentMetadataContext
 import org.gradle.api.artifacts.ComponentMetadataRule
 import org.gradle.api.artifacts.Configuration
-import org.gradle.api.component.SoftwareComponentFactory
+import org.gradle.api.attributes.Category
+import org.gradle.api.attributes.Usage
+import org.gradle.api.configuration.BuildFeatures
 import org.gradle.api.file.DuplicatesStrategy
 import org.gradle.api.plugins.JavaPlugin
 import org.gradle.api.plugins.JavaPluginExtension
@@ -90,30 +101,32 @@ import org.gradle.api.tasks.Copy
 import org.gradle.api.tasks.TaskProvider
 import org.gradle.api.tasks.bundling.Zip
 import org.gradle.api.tasks.compile.JavaCompile
-import org.gradle.api.tasks.javadoc.Javadoc
 import org.gradle.api.tasks.testing.AbstractTestTask
 import org.gradle.api.tasks.testing.Test
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
 import org.gradle.build.event.BuildEventsListenerRegistry
 import org.gradle.jvm.tasks.Jar
-import org.gradle.kotlin.dsl.KotlinClosure1
 import org.gradle.kotlin.dsl.create
 import org.gradle.kotlin.dsl.dependencies
-import org.gradle.kotlin.dsl.extra
 import org.gradle.kotlin.dsl.findByType
 import org.gradle.kotlin.dsl.getByType
+import org.gradle.kotlin.dsl.named
 import org.gradle.kotlin.dsl.withModule
 import org.gradle.kotlin.dsl.withType
 import org.gradle.plugin.devel.plugins.JavaGradlePluginPlugin
 import org.gradle.plugin.devel.tasks.ValidatePlugins
+import org.gradle.process.CommandLineArgumentProvider
+import org.jetbrains.kotlin.gradle.ExperimentalKotlinGradlePluginApi
+import org.jetbrains.kotlin.gradle.dsl.ExplicitApiMode
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.dsl.KotlinMultiplatformExtension
 import org.jetbrains.kotlin.gradle.dsl.KotlinProjectExtension
 import org.jetbrains.kotlin.gradle.dsl.KotlinVersion
 import org.jetbrains.kotlin.gradle.plugin.KotlinBasePluginWrapper
 import org.jetbrains.kotlin.gradle.plugin.KotlinMultiplatformPluginWrapper
 import org.jetbrains.kotlin.gradle.plugin.KotlinPlatformType
-import org.jetbrains.kotlin.gradle.plugin.mpp.KotlinAndroidTarget
+import org.jetbrains.kotlin.gradle.plugin.KotlinSourceSet
 import org.jetbrains.kotlin.gradle.targets.jvm.KotlinJvmTarget
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompilationTask
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
@@ -123,60 +136,55 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile
  * A plugin which enables all of the Gradle customizations for AndroidX. This plugin reacts to other
  * plugins being added and adds required and optional functionality.
  */
-abstract class AndroidXImplPlugin
-@Inject
-constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Project> {
-    @get:javax.inject.Inject abstract val registry: BuildEventsListenerRegistry
+abstract class AndroidXImplPlugin @Inject constructor() : Plugin<Project> {
+    @get:Inject abstract val registry: BuildEventsListenerRegistry
+    @get:Inject abstract val buildFeatures: BuildFeatures
 
     override fun apply(project: Project) {
         if (project.isRoot)
             throw Exception("Root project should use AndroidXRootImplPlugin instead")
-        val androidXExtension =
-            project.extensions.create<AndroidXExtension>(EXTENSION_NAME, project)
+        val androidXExtension = initializeAndroidXExtension(project)
 
         val androidXKmpExtension =
             project.extensions.create<AndroidXMultiplatformExtension>(
                 AndroidXMultiplatformExtension.EXTENSION_NAME,
-                project
+                project,
             )
 
         project.tasks.register(BUILD_ON_SERVER_TASK, DefaultTask::class.java)
         // Perform different actions based on which plugins have been applied to the project.
         // Many of the actions overlap, ex. API tracking.
         project.plugins.configureEach { plugin ->
-            @Suppress("UnstableApiUsage") // PrivacySandboxSdkPlugin, KMPAndroidPlugin
             when (plugin) {
                 is JavaGradlePluginPlugin -> configureGradlePluginPlugin(project)
                 is JavaPlugin -> configureWithJavaPlugin(project, androidXExtension)
                 is LibraryPlugin -> configureWithLibraryPlugin(project, androidXExtension)
                 is AppPlugin -> configureWithAppPlugin(project, androidXExtension)
                 is TestPlugin -> configureWithTestPlugin(project, androidXExtension)
+                is KspGradleSubplugin -> configureWithKspPlugin(project)
                 is KotlinMultiplatformAndroidPlugin ->
                     configureWithKotlinMultiplatformAndroidPlugin(
                         project,
                         androidXKmpExtension.agpKmpExtension,
-                        androidXExtension
+                        androidXExtension,
                     )
                 is KotlinBasePluginWrapper ->
                     configureWithKotlinPlugin(
                         project,
                         androidXExtension,
                         plugin,
-                        androidXKmpExtension
+                        androidXKmpExtension,
                     )
-                is PrivacySandboxSdkPlugin -> configureWithPrivacySandboxSdkPlugin(project)
+                is @Suppress("UnstableApiUsage") PrivacySandboxSdkPlugin -> // b/397703898
+                configureWithPrivacySandboxSdkPlugin(project)
+                is ProtobufPlugin -> configureProtobufPlugin(project)
             }
         }
 
         project.configureLint()
-        val formatWithKtfmt =
-            project.getKtfmtOptInPathPrefixes().any { prefix -> project.path.startsWith(prefix) }
-        if (formatWithKtfmt) {
-            project.configureKtfmt()
-        } else {
-            project.configureKtlint()
-        }
+        project.configureKtfmt()
         project.configureKotlinVersion()
+        project.configureJavaFormat()
 
         // Avoid conflicts between full Guava and LF-only Guava.
         project.configureGuavaUpgradeHandler()
@@ -185,29 +193,20 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project.tasks.withType(Zip::class.java).configureEach { it.configureForHermeticBuild() }
         project.tasks.withType(Copy::class.java).configureEach { it.configureForHermeticBuild() }
 
-        val allHostTests = project.tasks.register("allHostTests").get()
+        val allHostTests = project.tasks.register("allHostTests")
         // copy host side test results to DIST
         project.tasks.withType(AbstractTestTask::class.java) { task ->
-            configureTestTask(project, task, allHostTests)
-        }
-
-        project.tasks.withType(Test::class.java).configureEach { task ->
-            configureJvmTestTask(project, task)
+            configureTestTask(project, task, allHostTests, androidXExtension)
         }
 
         project.configureTaskTimeouts()
-        project.configureMavenArtifactUpload(
-            androidXExtension,
-            androidXKmpExtension,
-            componentFactory
-        ) {
+        project.configureMavenArtifactUpload(androidXExtension, androidXKmpExtension) {
+            if (buildFeatures.isIsolatedProjectsEnabled()) return@configureMavenArtifactUpload
             project.addCreateLibraryBuildInfoFileTasks(androidXExtension, androidXKmpExtension)
         }
         project.publishInspectionArtifacts()
-        project.configureExternalDependencyLicenseCheck()
         project.configureProjectStructureValidation(androidXExtension)
         project.configureProjectVersionValidation(androidXExtension)
-        project.registerProjectOrArtifact()
         project.validateMultiplatformPluginHasNotBeenApplied()
 
         project.tasks.register("printCoordinates", PrintProjectCoordinatesTask::class.java) {
@@ -222,42 +221,42 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             }
             if (androidXExtension.shouldPublish()) {
                 project.validatePublishedMultiplatformHasDefault()
+                project.addLicensesToPublishedArtifacts(androidXExtension.license)
+                project.registerValidateRelocatedDependenciesTask()
             }
             project.registerValidateMultiplatformSourceSetNamingTask()
+            project.validateLintVersionTestExists(androidXExtension)
+            project.addTestLintK1Task(androidXExtension)
         }
         project.disallowAccidentalAndroidDependenciesInKmpProject(androidXKmpExtension)
         TaskUpToDateValidator.setup(project, registry)
 
-        project.workaroundPrebuiltTakingPrecedenceOverProject()
+        project.workaroundAndroidXDependencyResolutions()
         project.configureSamplesProject()
+        project.configureMaxDepVersions(androidXExtension)
+        project.configureUnzipChromeBuildService()
+
+        project.configureDependencyAnalysisPlugin()
     }
 
-    private fun Project.registerProjectOrArtifact() {
-        // Add a method for each sub project where they can declare an optional
-        // dependency on a project or its latest snapshot artifact.
-        if (!ProjectLayoutType.isPlayground(this)) {
-            // In AndroidX build, this is always enforced to the project
-            extra.set(
-                PROJECT_OR_ARTIFACT_EXT_NAME,
-                KotlinClosure1<String, Project>(
-                    function = {
-                        // this refers to the first parameter of the closure.
-                        project.resolveProject(this)
-                    }
-                )
+    private fun initializeAndroidXExtension(project: Project): AndroidXExtension {
+        val versionService = LibraryVersionsService.registerOrGet(project).get()
+        val listProjectsService = ListProjectsService.registerOrGet(project)
+        return project.extensions
+            .create<AndroidXExtension>(
+                EXTENSION_NAME,
+                project,
+                versionService.libraryVersions,
+                versionService.libraryGroups.values.toList(),
+                versionService.libraryGroupsByGroupId,
+                versionService.overrideLibraryGroupsByProjectPath,
+                listProjectsService.map { it.allPossibleProjects },
+                { getHeadShaProvider(project) },
+                { configurationName: String ->
+                    configureAarAsJarForConfiguration(project, configurationName)
+                },
             )
-        } else {
-            // In Playground builds, they are converted to the latest SNAPSHOT artifact if the
-            // project is not included in that playground.
-            extra.set(
-                PROJECT_OR_ARTIFACT_EXT_NAME,
-                KotlinClosure1<String, Any>(
-                    function = {
-                        AndroidXPlaygroundRootImplPlugin.projectOrArtifact(rootProject, this)
-                    }
-                )
-            )
-        }
+            .apply { kotlinTarget.set(KotlinTarget.DEFAULT) }
     }
 
     /**
@@ -273,51 +272,17 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         duplicatesStrategy = DuplicatesStrategy.FAIL
     }
 
-    private fun configureJvmTestTask(project: Project, task: Test) {
-        // Robolectric 1.7 increased heap size requirements, see b/207169653.
-        task.maxHeapSize = "3g"
-
-        // For non-playground setup use robolectric offline
-        if (!ProjectLayoutType.isPlayground(project)) {
-            task.systemProperty("robolectric.offline", "true")
-            val robolectricDependencies =
-                File(
-                    project.getPrebuiltsRoot(),
-                    "androidx/external/org/robolectric/android-all-instrumented"
-                )
-            task.systemProperty(
-                "robolectric.dependency.dir",
-                robolectricDependencies.relativeTo(project.projectDir)
-            )
-        }
-    }
-
     private fun configureTestTask(
         project: Project,
         task: AbstractTestTask,
-        anchorTask: Task,
+        anchorTask: TaskProvider<Task>,
+        androidXExtension: AndroidXExtension,
     ) {
-        anchorTask.dependsOn(task)
-        val ignoreFailuresProperty =
-            project.providers.gradleProperty(TEST_FAILURES_DO_NOT_FAIL_TEST_TASK)
-        val ignoreFailures = ignoreFailuresProperty.isPresent
-        if (ignoreFailures) {
-            task.ignoreFailures = true
-        }
-        task.inputs.property("ignoreFailures", ignoreFailures)
-
+        anchorTask.configure { it.dependsOn(task) }
         val xmlReportDestDir = project.getHostTestResultDirectory()
         val testName = "${project.path}:${task.name}"
-        project.rootProject.tasks.named("createModuleInfo").configure {
-            it as ModuleInfoGenerator
-            it.testModules.add(
-                TestModule(
-                    name = testName,
-                    path =
-                        listOf(project.projectDir.toRelativeString(project.getSupportRootFolder()))
-                )
-            )
-        }
+        project.addToModuleInfo(testName, buildFeatures.isIsolatedProjectsEnabled())
+        androidXExtension.testModuleNames.add(testName)
         val archiveName = "$testName.zip"
         if (project.isDisplayTestOutput()) {
             // Enable tracing to see results in command line
@@ -347,7 +312,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 val zipXmlTask =
                     project.tasks.register(
                         "zipXmlResultsOf$capitalizedTestTaskName",
-                        Zip::class.java
+                        Zip::class.java,
                     ) {
                         it.destinationDirectory.set(xmlReportDestDir)
                         it.archiveFileName.set(archiveName)
@@ -362,23 +327,16 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
     /** Configures the project to use the Kotlin version specified by `androidx.kotlinTarget`. */
     private fun Project.configureKotlinVersion() {
         val kotlinVersionStringProvider = androidXConfiguration.kotlinBomVersion
-        val kotlinTestVersionStringProvider = androidXConfiguration.kotlinTestBomVersion
 
         // Resolve unspecified Kotlin versions to the target version.
         configurations.configureEach { configuration ->
-            val useVersionStringProvider =
-                if (configuration.isTest()) {
-                    kotlinTestVersionStringProvider
-                } else {
-                    kotlinVersionStringProvider
-                }
             configuration.resolutionStrategy { strategy ->
                 strategy.eachDependency { details ->
                     if (
                         details.requested.group == "org.jetbrains.kotlin" &&
                             details.requested.version == null
                     ) {
-                        details.useVersion(useVersionStringProvider.get())
+                        details.useVersion(kotlinVersionStringProvider.get())
                     }
                 }
             }
@@ -388,26 +346,12 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             KotlinVersion.fromVersion(version.substringBeforeLast('.'))
         }
 
-        fun KotlinCompilationTask<*>.isTestCompilation() =
-            multiplatformExtension?.targets?.any { target ->
-                target.compilations.findByName("test")?.compileKotlinTaskName == name
-            } ?: false
-
         // Set the Kotlin compiler's API and language version to ensure bytecode is compatible.
         val kotlinVersionProvider = kotlinVersionStringProvider.toKotlinVersionProvider()
-        val kotlinTestVersionProvider = kotlinTestVersionStringProvider.toKotlinVersionProvider()
         tasks.configureEach { task ->
             if (task is KotlinCompilationTask<*>) {
-                // We can't directly determine if a Task is compiling test code, but we can scrape
-                // the names of all the compilation units and compare them to Task names.
-                val useVersionProvider =
-                    if (task.isTestCompilation()) {
-                        kotlinTestVersionProvider
-                    } else {
-                        kotlinVersionProvider
-                    }
-                task.compilerOptions.apiVersion.set(useVersionProvider)
-                task.compilerOptions.languageVersion.set(useVersionProvider)
+                task.compilerOptions.apiVersion.set(kotlinVersionProvider)
+                task.compilerOptions.languageVersion.set(kotlinVersionProvider)
             }
         }
 
@@ -418,6 +362,16 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         afterEvaluate { evaluatedProject ->
             evaluatedProject.kotlinExtensionOrNull?.let { kotlinExtension ->
                 kotlinExtension.coreLibrariesVersion = kotlinVersionStringProvider.get()
+            }
+            if (evaluatedProject.androidXExtension.shouldPublish()) {
+                tasks.register(
+                    CheckKotlinApiTargetTask.TASK_NAME,
+                    CheckKotlinApiTargetTask::class.java,
+                ) {
+                    it.kotlinTarget.set(kotlinVersionProvider)
+                    it.outputFile.set(layout.buildDirectory.file("kotlinApiTargetCheckReport.txt"))
+                }
+                addToBuildOnServer(CheckKotlinApiTargetTask.TASK_NAME)
             }
         }
 
@@ -455,100 +409,111 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project: Project,
         androidXExtension: AndroidXExtension,
         plugin: KotlinBasePluginWrapper,
-        androidXMultiplatformExtension: AndroidXMultiplatformExtension
+        androidXMultiplatformExtension: AndroidXMultiplatformExtension,
     ) {
-        project.afterEvaluate {
-            val targetsAndroid =
+        val targetsAndroid =
+            project.provider {
                 project.plugins.hasPlugin(LibraryPlugin::class.java) ||
                     project.plugins.hasPlugin(AppPlugin::class.java) ||
                     project.plugins.hasPlugin(TestPlugin::class.java) ||
-                    @Suppress("UnstableApiUsage")
                     project.plugins.hasPlugin(KotlinMultiplatformAndroidPlugin::class.java)
-            val defaultJavaTargetVersion =
-                getDefaultTargetJavaVersion(androidXExtension.type).toString()
-            if (plugin is KotlinMultiplatformPluginWrapper) {
-                project.extensions.getByType<KotlinMultiplatformExtension>().apply {
-                    targets.withType<KotlinAndroidTarget> {
-                        compilations.configureEach {
-                            it.kotlinOptions.jvmTarget = defaultJavaTargetVersion
+            }
+        val defaultJavaTargetVersion =
+            project.provider {
+                getDefaultTargetJavaVersion(androidXExtension.type, project.name).toString()
+            }
+        val defaultJvmTarget = defaultJavaTargetVersion.map { JvmTarget.fromTarget(it) }
+        if (plugin is KotlinMultiplatformPluginWrapper) {
+            project.extensions.getByType<KotlinMultiplatformExtension>().apply {
+                targets.withType<KotlinMultiplatformAndroidLibraryTarget>().configureEach { t ->
+                    t.compilations.configureEach { compilation ->
+                        // Replace with compilation.compileJavaTaskProvider?.configure {}
+                        // when b/438995010 is fixed
+                        @Suppress("DEPRECATION")
+                        compilation.compilerOptions.configure { jvmTarget.set(defaultJvmTarget) }
+                        compilation.compileTaskProvider.configure {
+                            it.compilerOptions.jvmTarget.set(defaultJvmTarget)
                         }
                     }
-                    targets.withType<KotlinJvmTarget> {
-                        val defaultJavaTargetVersionForNonAndroidTargets =
+                }
+                targets.withType(KotlinJvmTarget::class.java).configureEach { target ->
+                    val defaultTargetVersionForNonAndroidTargets =
+                        project.provider {
                             getDefaultTargetJavaVersion(
-                                    libraryType = androidXExtension.type,
+                                    softwareType = androidXExtension.type,
                                     projectName = project.name,
-                                    targetName = name
+                                    targetName = target.name,
                                 )
                                 .toString()
-                        compilations.configureEach {
-                            it.compileJavaTaskProvider?.configure { javaCompile ->
-                                javaCompile.targetCompatibility =
-                                    defaultJavaTargetVersionForNonAndroidTargets
-                                javaCompile.sourceCompatibility =
-                                    defaultJavaTargetVersionForNonAndroidTargets
-                            }
-                            it.kotlinOptions {
-                                jvmTarget = defaultJavaTargetVersionForNonAndroidTargets
+                        }
+                    val defaultJvmTargetForNonAndroidTargets =
+                        defaultTargetVersionForNonAndroidTargets.map { JvmTarget.fromTarget(it) }
+                    target.compilations.configureEach { compilation ->
+                        compilation.compileJavaTaskProvider?.configure { javaCompile ->
+                            javaCompile.targetCompatibility =
+                                defaultTargetVersionForNonAndroidTargets.get()
+                            javaCompile.sourceCompatibility =
+                                defaultTargetVersionForNonAndroidTargets.get()
+                        }
+                        compilation.compileTaskProvider.configure { kotlinCompile ->
+                            kotlinCompile.compilerOptions {
+                                jvmTarget.set(defaultJvmTargetForNonAndroidTargets)
                                 // Set jdk-release version for non-Android KMP targets
-                                freeCompilerArgs +=
-                                    listOf(
-                                        "-Xjdk-release=$defaultJavaTargetVersionForNonAndroidTargets",
-                                    )
+                                freeCompilerArgs.add(
+                                    defaultTargetVersionForNonAndroidTargets.map {
+                                        "-Xjdk-release=$it"
+                                    }
+                                )
                             }
                         }
                     }
                 }
-            } else {
-                project.tasks.withType(KotlinJvmCompile::class.java).configureEach { task ->
-                    task.kotlinOptions.jvmTarget = defaultJavaTargetVersion
-                    if (!targetsAndroid) {
-                        // Set jdk-release version for non-Android JVM projects
-                        task.kotlinOptions.freeCompilerArgs +=
+            }
+        } else {
+            project.tasks.withType(KotlinJvmCompile::class.java).configureEach { task ->
+                task.compilerOptions.jvmTarget.set(defaultJvmTarget)
+                task.compilerOptions.freeCompilerArgs.addAll(
+                    targetsAndroid.zip(defaultJavaTargetVersion) { targetsAndroid, version ->
+                        if (targetsAndroid) {
+                            emptyList<String>()
+                        } else {
+                            // Set jdk-release version for non-Android JVM projects
+                            listOf("-Xjdk-release=$version")
+                        }
+                    }
+                )
+            }
+        }
+        project.tasks.withType(KotlinCompile::class.java).configureEach { task ->
+            val kotlinCompilerArgs =
+                project.provider {
+                    val args =
+                        mutableListOf(
+                            "-Xskip-metadata-version-check",
+                            "-Xjvm-default=all",
+                            // These two args can be removed once kotlin 2.1 is used
+                            "-Xjspecify-annotations=strict",
+                            "-Xtype-enhancement-improvements-strict-mode",
+                        )
+                    if (androidXExtension.type.targetsKotlinConsumersOnly) {
+                        // The Kotlin Compiler adds intrinsic assertions which are only relevant
+                        // when the code is consumed by Java users. Therefore we can turn this off
+                        // when code is being consumed by Kotlin users.
+
+                        // Additional Context:
+                        // https://github.com/JetBrains/kotlin/blob/master/compiler/cli/cli-common/src/org/jetbrains/kotlin/cli/common/arguments/K2JVMCompilerArguments.kt#L239
+                        // b/280633711
+                        args +=
                             listOf(
-                                "-Xjdk-release=$defaultJavaTargetVersion",
+                                "-Xno-param-assertions",
+                                "-Xno-call-assertions",
+                                "-Xno-receiver-assertions",
                             )
                     }
-                }
-            }
-            project.tasks.withType(KotlinCompile::class.java).configureEach { task ->
-                val kotlinCompilerArgs =
-                    mutableListOf(
-                        "-Xskip-metadata-version-check",
-                    )
-                // TODO (b/259578592): enable -Xjvm-default=all for camera-camera2-pipe projects
-                if (!project.name.contains("camera-camera2-pipe")) {
-                    kotlinCompilerArgs += "-Xjvm-default=all"
-                }
-                if (androidXExtension.type.targetsKotlinConsumersOnly) {
-                    // The Kotlin Compiler adds intrinsic assertions which are only relevant
-                    // when the code is consumed by Java users. Therefore we can turn this off
-                    // when code is being consumed by Kotlin users.
 
-                    // Additional Context:
-                    // https://github.com/JetBrains/kotlin/blob/master/compiler/cli/cli-common/src/org/jetbrains/kotlin/cli/common/arguments/K2JVMCompilerArguments.kt#L239
-                    // b/280633711
-                    kotlinCompilerArgs +=
-                        listOf(
-                            "-Xno-param-assertions",
-                            "-Xno-call-assertions",
-                            "-Xno-receiver-assertions"
-                        )
+                    args
                 }
-                task.kotlinOptions.freeCompilerArgs += kotlinCompilerArgs
-                logScriptSources(task, project)
-            }
-
-            // Explicit API mode is broken for Android projects
-            // https://youtrack.jetbrains.com/issue/KT-37652
-            if (androidXExtension.shouldEnforceKotlinStrictApiMode() && !targetsAndroid) {
-                project.tasks.withType(KotlinCompile::class.java).configureEach { task ->
-                    // Workaround for https://youtrack.jetbrains.com/issue/KT-37652
-                    if (task.name.endsWith("TestKotlin")) return@configureEach
-                    if (task.name.endsWith("TestKotlinJvm")) return@configureEach
-                    task.kotlinOptions.freeCompilerArgs += listOf("-Xexplicit-api=strict")
-                }
-            }
+            task.compilerOptions.freeCompilerArgs.addAll(kotlinCompilerArgs)
         }
         if (plugin is KotlinMultiplatformPluginWrapper) {
             KonanPrebuiltsSetup.configureKonanDirectory(project)
@@ -571,7 +536,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             // Disable any source JAR task(s) added by KotlinMultiplatformPlugin.
             // https://youtrack.jetbrains.com/issue/KT-55881
             project.tasks.withType(Jar::class.java).configureEach { jarTask ->
-                if (jarTask.name == "jvmSourcesJar") {
+                if (jarTask.name == "androidSourcesJar" || jarTask.name == "jvmSourcesJar") {
                     // We can't set duplicatesStrategy directly on the Jar task since it will get
                     // overridden when the KotlinMultiplatformPlugin creates child specs, but we
                     // can set it on a per-file basis.
@@ -580,6 +545,16 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                     }
                 }
             }
+        }
+
+        project.afterEvaluate {
+            val kotlinExtension = project.kotlinExtensionOrNull
+            kotlinExtension?.explicitApi =
+                if (androidXExtension.shouldEnforceKotlinStrictApiMode()) {
+                    ExplicitApiMode.Strict
+                } else {
+                    ExplicitApiMode.Disabled
+                }
         }
     }
 
@@ -612,8 +587,11 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             }
         }
 
+        project.configureJavaCompilationWarnings(
+            androidXExtension = androidXExtension,
+            isTestApp = true,
+        )
         project.buildOnServerDependsOnAssembleRelease()
-        project.buildOnServerDependsOnLint()
     }
 
     private fun configureWithTestPlugin(project: Project, androidXExtension: AndroidXExtension) {
@@ -627,118 +605,209 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 // Sign all the builds (including release) with debug key
                 buildType.signingConfig = debugSigningConfig
             }
-            project.configureTestConfigGeneration(this)
+            project.configureTestConfigGeneration(androidXExtension.isIsolatedProjectsEnabled())
             project.addAppApkToTestConfigGeneration(androidXExtension)
             excludeVersionFiles(packaging.resources)
         }
 
+        project.extensions.getByType(AndroidComponentsExtension::class.java).apply {
+            onVariants { it.configureLocalAsbSigning(project.getKeystore()) }
+        }
         project.configureJavaCompilationWarnings(androidXExtension)
+    }
 
-        project.addToProjectMap(androidXExtension)
+    private fun configureWithKspPlugin(project: Project) =
+        project.extensions.getByType<KspExtension>().useKsp2.set(true)
+
+    private fun configureCommonAndroidLibrary(
+        project: Project,
+        androidXExtension: AndroidXExtension,
+        androidComponents:
+            AndroidComponentsExtension<*, out LibraryVariantBuilder, out LibraryVariant>,
+    ) {
+        androidComponents.onVariants { variant ->
+            variant.configureTests()
+            variant.enableMicrobenchmarkInternalDefaults(project)
+            project.validateKotlinModuleFiles(
+                variant.name,
+                variant.artifacts.get(SingleArtifact.AAR),
+            )
+        }
+
+        project.disableStrictVersionConstraints()
+        project.configureJavaCompilationWarnings(androidXExtension)
+        project.setUpCheckDocsTask(androidXExtension)
+        project.enforceDeviceTestsForMultiplatform()
+    }
+
+    // Sets up android instrumented tests and includes common tests regardless of if they have
+    // been explicitly configured.
+    @OptIn(ExperimentalKotlinGradlePluginApi::class)
+    private fun Project.enforceDeviceTestsForMultiplatform() {
+        project.multiplatformExtension?.let {
+            val commonTestSourceSet = it.sourceSets.getByName("commonTest")
+            val androidInstrumentedTestSourceSet =
+                it.sourceSets.getByName("androidInstrumentedTest")
+            val commonTestFilesExist = commonTestSourceSet.kotlin.files.isNotEmpty()
+            if (commonTestFilesExist) {
+                androidInstrumentedTestSourceSet.dependsOn(commonTestSourceSet)
+                androidInstrumentedTestSourceSet.dependencies {
+                    implementation(getLibraryByName("testRunner"))
+                }
+            }
+        }
+    }
+
+    private fun KotlinSourceSet.includesSourceSet(otherName: String): Boolean =
+        name == otherName || dependsOn.any { it.includesSourceSet(otherName) }
+
+    private fun AarMetadata.configure(compileSdk: Int?) {
+        // Taken from
+        // https://developer.android.com/build/releases/gradle-plugin#api-level-support
+        fun mapToMinAgpVersion(compileSdk: Int): String {
+            return when (compileSdk) {
+                34 -> "8.1.1"
+                35 -> "8.6.0"
+                36 -> "8.9.1"
+                else -> throw Exception("Unknown compileSdk to minAgpVersion mapping")
+            }
+        }
+
+        // Propagate the compileSdk value into minCompileSdk. Don't propagate
+        // compileSdkExtension, since only one library actually depends on the extension
+        // APIs and they can explicitly declare that in their build.gradle. Note that when
+        // we're using a preview SDK, the value for compileSdk will be null and the
+        // resulting AAR metadata won't have a minCompileSdk --
+        // this is okay because AGP automatically embeds forceCompileSdkPreview in the AAR
+        // metadata and uses it instead of minCompileSdk.
+        if (compileSdk == null) return
+        minCompileSdk = compileSdk
+        minAgpVersion = mapToMinAgpVersion(compileSdk)
     }
 
     private fun configureWithKotlinMultiplatformAndroidPlugin(
         project: Project,
-        kotlinMultiplatformAndroidTarget: KotlinMultiplatformAndroidTarget,
-        androidXExtension: AndroidXExtension
+        kotlinMultiplatformAndroidTarget: KotlinMultiplatformAndroidLibraryTarget,
+        androidXExtension: AndroidXExtension,
     ) {
         val kotlinMultiplatformAndroidComponentsExtension =
             project.extensions.getByType<KotlinMultiplatformAndroidComponentsExtension>()
         kotlinMultiplatformAndroidTarget.configureAndroidBaseOptions(
             project,
-            kotlinMultiplatformAndroidComponentsExtension
+            kotlinMultiplatformAndroidComponentsExtension,
         )
-        kotlinMultiplatformAndroidTarget.configureAndroidLibraryOptions(project, androidXExtension)
-
-        project.configureProjectForApiTasks(AndroidMultiplatformApiTaskConfig, androidXExtension)
-
-        kotlinMultiplatformAndroidComponentsExtension.onVariant { it.configureTests() }
-
-        project.configurePublicResourcesStub(project.multiplatformExtension!!)
-        kotlinMultiplatformAndroidComponentsExtension.onVariant { variant ->
-            project.configureMultiplatformSourcesForAndroid(
-                variant.name,
-                kotlinMultiplatformAndroidTarget,
-                androidXExtension.samplesProjects
-            )
+        configureCommonAndroidLibrary(
+            project,
+            androidXExtension,
+            kotlinMultiplatformAndroidComponentsExtension,
+        )
+        kotlinMultiplatformAndroidComponentsExtension.apply {
+            finalizeDsl {
+                it.aarMetadata.configure(it.compileSdk)
+                it.lint.targetSdk = project.defaultAndroidConfig.targetSdk
+                project.setUpBlankProguardFileForKmpAarIfNeeded(
+                    kotlinMultiplatformAndroidTarget.optimization.consumerKeepRules
+                )
+            }
         }
+
+        kotlinMultiplatformAndroidComponentsExtension.onVariants { variant ->
+            project.configureProjectForApiTasks(
+                AndroidMultiplatformApiTaskConfig(variant),
+                androidXExtension,
+            )
+            project.configureProjectForKzipTasks(
+                AndroidMultiplatformApiTaskConfig(variant),
+                androidXExtension,
+            )
+            project.configurePublicResourcesStub(variant)
+            project.configureMultiplatformSourcesForAndroid(androidXExtension.samplesProjects)
+        }
+
         project.configureVersionFileWriter(project.multiplatformExtension!!, androidXExtension)
-        project.configureJavaCompilationWarnings(androidXExtension)
 
         project.configureDependencyVerification(androidXExtension) { taskProvider ->
             kotlinMultiplatformAndroidTarget.compilations.configureEach {
                 taskProvider.configure { task -> task.dependsOn(it.compileTaskProvider) }
             }
         }
-
-        project.addToProjectMap(androidXExtension)
         project.afterEvaluate {
             project.addToBuildOnServer("assembleAndroidMain")
             project.addToBuildOnServer("lint")
+            // Created to be consumed by docs-tip-of-tree
+            project.configurations.register("androidIntermediates") {
+                it.isVisible = false
+                it.isCanBeResolved = false
+                it.attributes.attribute(
+                    Usage.USAGE_ATTRIBUTE,
+                    project.objects.named(Usage.JAVA_RUNTIME),
+                )
+                it.attributes.attribute(
+                    Category.CATEGORY_ATTRIBUTE,
+                    project.objects.named<Category>(Category.LIBRARY),
+                )
+                it.attributes.attribute(
+                    BuildTypeAttr.ATTRIBUTE,
+                    project.objects.named<BuildTypeAttr>("release"),
+                )
+                it.outgoing.artifact(project.tasks.named("createFullJarAndroidMain"))
+            }
         }
-        project.setUpCheckDocsTask(androidXExtension)
-        project.writeBlankPublicTxtToAar(kotlinMultiplatformAndroidComponentsExtension)
     }
 
-    private fun Project.writeBlankPublicTxtToAar(
-        componentsExtension: KotlinMultiplatformAndroidComponentsExtension
-    ) {
-        val blankPublicResourceDir =
-            project.getSupportRootFolder().resolve("buildSrc/blank-res-api")
-        componentsExtension.onVariant { variant ->
-            val taskProvider =
-                tasks.register(
-                    "repackageAarWithResourceApi".appendCapitalized(variant.name),
-                    RepackagingTask::class.java
-                ) { task ->
-                    task.from(blankPublicResourceDir)
-                    task.from(zipTree(task.aarFile))
-                    task.destinationDirectory.fileProvider(
-                        task.output.locationOnly.map { location -> location.asFile.parentFile }
-                    )
-                    task.archiveFileName.set(
-                        task.output.locationOnly.map { location -> location.asFile.name }
-                    )
+    private fun configureProtobufPlugin(project: Project) {
+        project.extensions.getByType(ProtobufExtension::class.java).apply {
+            protoc { it.artifact = project.getLibraryByName("protobufCompiler").toString() }
+            generateProtoTasks {
+                it.all().configureEach { task ->
+                    // java projects have "java" output enabled, however Android projects do not
+                    // so we need to create it for Android projects.
+                    // https://github.com/google/protobuf-gradle-plugin?tab=readme-ov-file#default-outputs
+                    val java =
+                        if (
+                            project.plugins.hasPlugin("com.android.library") ||
+                                project.plugins.hasPlugin("com.android.application")
+                        ) {
+                            task.builtins.register("java")
+                        } else task.builtins.named("java")
+                    java.configure { options -> options.option("lite") }
                 }
-            variant.artifacts
-                .use(taskProvider)
-                .wiredWithFiles(RepackagingTask::aarFile, RepackagingTask::output)
-                .toTransform(SingleArtifact.AAR)
+            }
         }
     }
 
-    @Suppress("UnstableApiUsage") // usage of PrivacySandboxSdkExtension
+    @Suppress("UnstableApiUsage") // usage of PrivacySandboxSdkExtension b/397703898
     private fun configureWithPrivacySandboxSdkPlugin(project: Project) {
+        project.tasks.register("check")
         project.extensions.getByType<PrivacySandboxSdkExtension>().apply {
             configureLocalAsbSigning(experimentalProperties, project.getKeystore())
+            compileSdk = project.defaultAndroidConfig.compileSdk
+            minSdk = project.defaultAndroidConfig.minSdk
+            buildToolsVersion = project.defaultAndroidConfig.buildToolsVersion
+            bundle { setVersion(1, 0, 0) }
+        }
+        // Workaround for b/389890488
+        project.configurations.configureEach { configuration ->
+            if (configuration.isCanBeResolved) {
+                configuration.attributes { attributeContainer ->
+                    attributeContainer.attribute(
+                        BuildTypeAttr.ATTRIBUTE,
+                        project.objects.named(BuildTypeAttr::class.java, "release"),
+                    )
+                }
+            }
         }
     }
 
     private fun configureLocalAsbSigning(
         experimentalProperties: MutableMap<String, Any>,
-        keyStore: File
+        keyStore: File,
     ) {
         experimentalProperties[ASB_SIGNING_CONFIG_PROPERTY_NAME] = keyStore.absolutePath
     }
 
     private val ASB_SIGNING_CONFIG_PROPERTY_NAME =
         "android.privacy_sandbox.local_deployment_signing_store_file"
-
-    /** Temporary diagnostics for b/321949384 */
-    private fun logScriptSources(task: KotlinCompile, project: Project) {
-        if (getBuildId() == "0") return // don't need to log when not running on the build server
-        val logFile = File(project.getDistributionDirectory(), "KotlinCompile-scriptSources.log")
-        fun writeScriptSources(label: String) {
-            val now = LocalDateTime.now()
-            @Suppress("INVISIBLE_MEMBER") val scriptSources = task.scriptSources.files
-            logFile.appendText(
-                "${task.path} $label at $now with ${scriptSources.size} scriptSources: " +
-                    "${scriptSources.joinToString()}\n"
-            )
-        }
-        task.doFirst { writeScriptSources("starting") }
-        task.doLast { writeScriptSources("completed") }
-    }
 
     /**
      * Excludes files telling which versions of androidx libraries were used in test apks, to avoid
@@ -760,28 +829,8 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         project.addToBuildOnServer("assembleRelease")
     }
 
-    private fun Project.buildOnServerDependsOnLint() {
-        if (!project.usingMaxDepVersions()) {
-            val androidComponents = extensions.findByType(AndroidComponentsExtension::class.java)
-            androidComponents?.onVariants { variant ->
-                if (!variant.name.lowercase(Locale.getDefault()).contains("release")) {
-                    val taskName =
-                        "lint${variant.name.replaceFirstChar {
-                            if (it.isLowerCase()) {
-                                it.titlecase(Locale.getDefault())
-                            } else {
-                                it.toString()
-                            }
-                        }}"
-                    project.addToBuildOnServer(taskName)
-                }
-            }
-        }
-    }
-
-    @Suppress("UnstableApiUsage") // usage of HasDeviceTests
     private fun HasDeviceTests.configureTests() {
-        deviceTests.forEach { deviceTest ->
+        deviceTests.forEach { (_, deviceTest) ->
             deviceTest.packaging.resources.apply {
                 excludeVersionFiles(this)
 
@@ -795,52 +844,27 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 // are:
                 //   - net.java.dev.jna:jna:5.5.0
                 excludes.add("/META-INF/LGPL2.1")
+
+                // AGP is unable to merge these and multiple artifacts ship this files
+                // e.g. org/jspecify/jspecify/1.0.0/jspecify-1.0.0.jar
+                //      org/bouncycastle/bcprov-jdk18on/1.78.1/bcprov-jdk18on-1.78.1.jar
+                pickFirsts.add("META-INF/versions/9/OSGI-INF/MANIFEST.MF")
             }
         }
     }
 
-    /**
-     * Enable long-running method tracing on the UI thread, even if that risks ANR for profiling
-     * convenience.
-     *
-     * See [androidx.build.testConfiguration.INST_ARG_BLOCKLIST], which is used to suppress the arg
-     * in CI.
-     */
-    @Suppress("UnstableApiUsage") // usage of HasDeviceTests
-    private fun HasDeviceTests.enableLongMethodTracingInMicrobenchmark(project: Project) {
-        if (project.hasBenchmarkPlugin()) {
-            deviceTests.forEach { deviceTest ->
-                deviceTest.instrumentationRunnerArguments.put(
-                    "androidx.benchmark.profiling.skipWhenDurationRisksAnr",
-                    "false"
-                )
-            }
-        }
-    }
-
-    private fun Variant.aotCompileMicrobenchmarks(project: Project) {
-        if (project.hasBenchmarkPlugin()) {
-            @Suppress("UnstableApiUsage") // usage of experimentalProperties
-            experimentalProperties.put("android.experimental.force-aot-compilation", true)
-        }
-    }
-
-    @Suppress("UnstableApiUsage") // usage of experimentalProperties
+    @Suppress("UnstableApiUsage") // usage of experimentalProperties b/397703898
     private fun Variant.configureLocalAsbSigning(keyStore: File) {
         experimentalProperties.put(ASB_SIGNING_CONFIG_PROPERTY_NAME, keyStore.absolutePath)
     }
 
     private fun configureWithLibraryPlugin(project: Project, androidXExtension: AndroidXExtension) {
-        project.extensions.getByType<LibraryExtension>().apply {
+        val buildTypeForTests = "release"
+        val libraryExtension = project.extensions.getByType<LibraryExtension>()
+        libraryExtension.apply {
             publishing { singleVariant(DEFAULT_PUBLISH_CONFIG) }
 
             configureAndroidBaseOptions(project, androidXExtension)
-
-            // Move to api that allows settings of targetSdk on each variant's androidTest when
-            // b/335257447 is fixed
-            @Suppress("DEPRECATION")
-            defaultConfig.targetSdk = project.defaultAndroidConfig.targetSdk
-
             val debugSigningConfig = signingConfigs.getByName("debug")
             // Use a local debug keystore to avoid build server issues.
             debugSigningConfig.storeFile = project.getKeystore()
@@ -848,66 +872,57 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 // Sign all the builds (including release) with debug key
                 buildType.signingConfig = debugSigningConfig
             }
-            project.configureTestConfigGeneration(this)
+            testBuildType = buildTypeForTests
+            project.configureTestConfigGeneration(androidXExtension.isIsolatedProjectsEnabled())
             project.addAppApkToTestConfigGeneration(androidXExtension)
         }
 
         val libraryAndroidComponentsExtension =
             project.extensions.getByType<LibraryAndroidComponentsExtension>()
+        configureCommonAndroidLibrary(project, androidXExtension, libraryAndroidComponentsExtension)
 
         libraryAndroidComponentsExtension.apply {
             finalizeDsl {
-                // Propagate the compileSdk value into minCompileSdk. Don't propagate
-                // compileSdkExtension, since only one library actually depends on the extension
-                // APIs and they can explicitly declare that in their build.gradle. Note that when
-                // we're using a preview SDK, the value for compileSdk will be null and the
-                // resulting AAR metadata won't have a minCompileSdk --
-                // this is okay because AGP automatically embeds forceCompileSdkPreview in the AAR
-                // metadata and uses it instead of minCompileSdk.
-                it.defaultConfig.aarMetadata.minCompileSdk = it.compileSdk
+                it.defaultConfig.aarMetadata.configure(it.compileSdk)
+                it.lint.targetSdk = project.defaultAndroidConfig.targetSdk
+                it.testOptions.targetSdk = project.defaultAndroidConfig.targetSdk
+                // Replace with a public API once available, see b/360392255
+                it.buildTypes.configureEach { buildType ->
+                    if (buildType.name == buildTypeForTests && !project.hasBenchmarkPlugin())
+                        (buildType as TestBuildType).isDebuggable = true
+                    project.setUpBlankProguardFileForAarIfNeeded(buildType)
+                }
             }
-            beforeVariants(selector().withBuildType("release")) { variant ->
-                (variant as HasUnitTestBuilder).enableUnitTest = false
-            }
-            onVariants { variant ->
-                variant.configureTests()
-                variant.aotCompileMicrobenchmarks(project)
-                variant.enableLongMethodTracingInMicrobenchmark(project)
-            }
+            // Disable debug build type for Android Libraries
+            beforeVariants(selector().withBuildType("debug")) { variant -> variant.enable = false }
         }
 
-        project.disableStrictVersionConstraints()
-        project.setPublishProperty(androidXExtension)
         project.configureVersionFileWriter(libraryAndroidComponentsExtension, androidXExtension)
-        project.configureJavaCompilationWarnings(androidXExtension)
 
         val prebuiltLibraries = listOf("libtracing_perfetto.so", "libc++_shared.so")
-        val copyPublicResourcesDirTask =
-            project.tasks.register(
-                "generatePublicResourcesStub",
-                CopyPublicResourcesDirTask::class.java
-            ) { task ->
-                task.buildSrcResDir.set(File(project.getSupportRootFolder(), "buildSrc/res"))
-            }
         libraryAndroidComponentsExtension.onVariants { variant ->
             if (variant.buildType == DEFAULT_PUBLISH_CONFIG) {
                 // Standard docs, resource API, and Metalava configuration for AndroidX projects.
                 project.configureProjectForApiTasks(
                     LibraryApiTaskConfig(variant),
-                    androidXExtension
+                    androidXExtension,
+                )
+                project.configureProjectForKzipTasks(
+                    LibraryApiTaskConfig(variant),
+                    androidXExtension,
                 )
             }
             if (variant.name == DEFAULT_PUBLISH_CONFIG) {
                 project.configureSourceJarForAndroid(variant, androidXExtension.samplesProjects)
+                project.configurePublicResourcesStub(variant)
                 project.configureDependencyVerification(androidXExtension) { taskProvider ->
                     taskProvider.configure { task -> task.dependsOn("compileReleaseJavaWithJavac") }
                 }
             }
-            configurePublicResourcesStub(variant, copyPublicResourcesDirTask)
             val verifyELFRegionAlignmentTaskProvider =
                 project.tasks.register(
                     variant.name + "VerifyELFRegionAlignment",
-                    VerifyELFRegionAlignmentTask::class.java
+                    VerifyELFRegionAlignmentTask::class.java,
                 ) { task ->
                     task.files.from(
                         variant.artifacts.get(SingleArtifact.MERGED_NATIVE_LIBS).map { dir ->
@@ -921,13 +936,7 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 }
             project.addToBuildOnServer(verifyELFRegionAlignmentTaskProvider)
         }
-
-        project.setUpCheckDocsTask(androidXExtension)
-
-        project.addToProjectMap(androidXExtension)
-
         project.buildOnServerDependsOnAssembleRelease()
-        project.buildOnServerDependsOnLint()
     }
 
     private fun configureGradlePluginPlugin(project: Project) {
@@ -935,47 +944,44 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             it.enableStricterValidation.set(true)
             it.failOnWarning.set(true)
         }
+        project.addToBuildOnServer("validatePlugins")
         SdkResourceGenerator.generateForHostTest(project)
     }
 
-    private fun getDefaultTargetJavaVersion(
-        libraryType: LibraryType,
-        projectName: String? = null,
-        targetName: String? = null
-    ): JavaVersion {
-        return when {
-            projectName != null && projectName.contains("desktop") -> VERSION_11
-            targetName != null && targetName == "desktop" -> VERSION_11
-            libraryType == LibraryType.COMPILER_PLUGIN -> VERSION_11
-            libraryType.compilationTarget == CompilationTarget.HOST -> VERSION_17
-            else -> VERSION_1_8
-        }
-    }
-
     private fun configureWithJavaPlugin(project: Project, androidXExtension: AndroidXExtension) {
+        if (
+            project.multiplatformExtension != null &&
+                !project.multiplatformExtension!!.hasJvmTarget()
+        ) {
+            return
+        }
         project.configureErrorProneForJava()
 
         // Force Java 1.8 source- and target-compatibility for all Java libraries.
         val javaExtension = project.extensions.getByType<JavaPluginExtension>()
         project.afterEvaluate {
             javaExtension.apply {
-                val defaultTargetJavaVersion = getDefaultTargetJavaVersion(androidXExtension.type)
+                val defaultTargetJavaVersion =
+                    getDefaultTargetJavaVersion(androidXExtension.type, project.name)
                 sourceCompatibility = defaultTargetJavaVersion
                 targetCompatibility = defaultTargetJavaVersion
-                project.disableJava8TargetObsoleteWarnings()
             }
             if (!project.plugins.hasPlugin(KotlinBasePluginWrapper::class.java)) {
                 project.configureSourceJarForJava(androidXExtension.samplesProjects)
             }
         }
 
+        project.setUpBlankProguardFileForJarIfNeeded(javaExtension)
         project.configureJavaCompilationWarnings(androidXExtension)
 
-        project.hideJavadocTask()
-
-        project.configureDependencyVerification(androidXExtension) { taskProvider ->
-            taskProvider.configure { task ->
-                task.dependsOn(project.tasks.named(JavaPlugin.COMPILE_JAVA_TASK_NAME))
+        if (
+            project.multiplatformExtension == null ||
+                project.multiplatformExtension!!.hasJavaEnabled()
+        ) {
+            project.configureDependencyVerification(androidXExtension) { taskProvider ->
+                taskProvider.configure { task ->
+                    task.dependsOn(project.tasks.named(JavaPlugin.COMPILE_JAVA_TASK_NAME))
+                }
             }
         }
 
@@ -987,19 +993,8 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             }
 
         project.configureProjectForApiTasks(apiTaskConfig, androidXExtension)
+        project.configureProjectForKzipTasks(apiTaskConfig, androidXExtension)
         project.setUpCheckDocsTask(androidXExtension)
-
-        project.afterEvaluate {
-            if (androidXExtension.shouldRelease()) {
-                project.extra.set("publish", true)
-            }
-        }
-
-        // Workaround for b/120487939 wherein Gradle's default resolution strategy prefers external
-        // modules with lower versions over local projects with higher versions.
-        project.configurations.configureEach { configuration ->
-            configuration.resolutionStrategy.preferProjectModules()
-        }
 
         if (project.multiplatformExtension == null) {
             project.addToBuildOnServer("jar")
@@ -1012,8 +1007,6 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                 }
             }
         }
-
-        project.addToProjectMap(androidXExtension)
     }
 
     private fun Project.configureProjectStructureValidation(androidXExtension: AndroidXExtension) {
@@ -1021,10 +1014,9 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         afterEvaluate {
             val mavenGroup = androidXExtension.mavenGroup
             val isProbablyPublished =
-                androidXExtension.type == LibraryType.PUBLISHED_LIBRARY ||
+                androidXExtension.type == SoftwareType.PUBLISHED_LIBRARY ||
                     androidXExtension.type ==
-                        LibraryType.PUBLISHED_LIBRARY_ONLY_USED_BY_KOTLIN_CONSUMERS ||
-                    androidXExtension.type == LibraryType.UNSET
+                        SoftwareType.PUBLISHED_LIBRARY_ONLY_USED_BY_KOTLIN_CONSUMERS
             if (mavenGroup != null && isProbablyPublished && androidXExtension.shouldPublish()) {
                 validateProjectMavenGroup(mavenGroup.group)
                 validateProjectMavenName(androidXExtension.name.get(), mavenGroup.group)
@@ -1038,15 +1030,20 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         afterEvaluate { androidXExtension.validateMavenVersion() }
     }
 
-    private fun CommonExtension<*, *, *, *, *, *>.configureAndroidBaseOptions(
+    private fun Any.configureAndroidBaseOptions(
         project: Project,
-        androidXExtension: AndroidXExtension
+        androidXExtension: AndroidXExtension,
     ) {
+        // Workaround to avoid specifying the parametrized types of CommonExtension explicitly
+        // So we can clean up the parameters in AGP
+        // The compiler can infer that this is CommonExtension from these checks
+        if (this !is ApplicationExtension && this !is LibraryExtension && this !is TestExtension) {
+            throw IllegalArgumentException("Unexpected extension: $this")
+        }
         compileOptions.apply {
             sourceCompatibility = VERSION_1_8
             targetCompatibility = VERSION_1_8
         }
-        project.disableJava8TargetObsoleteWarnings()
 
         val defaultMinSdk = project.defaultAndroidConfig.minSdk
         val defaultCompileSdk = project.defaultAndroidConfig.compileSdk
@@ -1057,19 +1054,21 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         compileSdk = project.defaultAndroidConfig.compileSdk
 
         buildToolsVersion = project.defaultAndroidConfig.buildToolsVersion
-        ndkVersion = project.defaultAndroidConfig.ndkVersion
 
+        defaultConfig.ndk.abiFilters.addAll(SUPPORTED_BUILD_ABIS)
         defaultConfig.minSdk = defaultMinSdk
         defaultConfig.testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 
         testOptions.animationsDisabled = !project.isMacrobenchmark()
-        testOptions.unitTests.isReturnDefaultValues = true
-        testOptions.unitTests.all { task -> task.configureForRobolectric() }
-
-        // Include resources in Robolectric tests as a workaround for b/184641296
-        testOptions.unitTests.isIncludeAndroidResources = true
 
         project.afterEvaluate {
+            check(
+                !androidXExtension.shouldPublish() || !compileOptions.isCoreLibraryDesugaringEnabled
+            ) {
+                "AndroidX libraries are not permitted to use core library desugaring as it " +
+                    "forces library users to also enable core library desugaring."
+            }
+
             val minSdkVersion = defaultConfig.minSdk!!
             check(minSdkVersion >= defaultMinSdk) {
                 "minSdkVersion $minSdkVersion lower than the default of $defaultMinSdk"
@@ -1099,9 +1098,12 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             }
         }
 
-        project.configureFtlRunner(
+        val componentsExtension =
             project.extensions.getByType(AndroidComponentsExtension::class.java)
-        )
+        project.configureFtlRunner(componentsExtension)
+
+        // If a dependency is missing a debug variant, use release instead.
+        buildTypes.getByName("debug").matchingFallbacks.add("release")
 
         // AGP warns if we use project.buildDir (or subdirs) for CMake's generated
         // build files (ninja build files, CMakeCache.txt, etc.). Use a staging directory that
@@ -1116,9 +1118,9 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         )
     }
 
-    private fun KotlinMultiplatformAndroidTarget.configureAndroidBaseOptions(
+    private fun KotlinMultiplatformAndroidLibraryTarget.configureAndroidBaseOptions(
         project: Project,
-        componentsExtension: KotlinMultiplatformAndroidComponentsExtension
+        componentsExtension: KotlinMultiplatformAndroidComponentsExtension,
     ) {
         val defaultMinSdkVersion = project.defaultAndroidConfig.minSdk
         val defaultCompileSdk = project.defaultAndroidConfig.compileSdk
@@ -1130,22 +1132,27 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
 
         lint.targetSdk = project.defaultAndroidConfig.targetSdk
         compilations
-            .withType(KotlinMultiplatformAndroidTestOnDeviceCompilation::class.java)
+            .withType(KotlinMultiplatformAndroidDeviceTestCompilation::class.java)
             .configureEach {
                 it.instrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
                 it.animationsDisabled = true
             }
-        compilations
-            .withType(KotlinMultiplatformAndroidTestOnJvmCompilation::class.java)
-            .configureEach {
-                it.isReturnDefaultValues = true
-                // Include resources in Robolectric tests as a workaround for b/184641296
-                it.isIncludeAndroidResources = true
-            }
 
-        project.tasks.withType(AndroidUnitTest::class.java).configureEach { task ->
-            task.configureForRobolectric()
+        @Suppress("UnstableApiUsage") // usage of withHostTestBuilder
+        withHostTestBuilder {
+            @Suppress("DEPRECATION")
+            defaultSourceSetName = "androidUnitTest"
         }
+
+        @Suppress("UnstableApiUsage") // usage of withDeviceTestBuilder
+        withDeviceTestBuilder {
+            @Suppress("DEPRECATION")
+            compilationName = "instrumentedTest"
+            @Suppress("DEPRECATION")
+            defaultSourceSetName = "androidInstrumentedTest"
+            sourceSetTreeName = "test"
+        }
+        configureTargetSdkForTests(project.defaultAndroidConfig.targetSdk)
 
         // validate that SDK versions haven't been altered during evaluation
         project.afterEvaluate {
@@ -1159,18 +1166,22 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             project.enforceBanOnVersionRanges()
         }
 
-        project.configureTestConfigGeneration(this, componentsExtension)
+        project.configureTestConfigGeneration(buildFeatures.isIsolatedProjectsEnabled())
         project.configureFtlRunner(componentsExtension)
     }
 
-    private fun KotlinMultiplatformAndroidTarget.configureAndroidLibraryOptions(
-        project: Project,
-        androidXExtension: AndroidXExtension
-    ) {
-        // Propagate the compileSdk value into minCompileSdk.
-        aarMetadata.minCompileSdk = compileSdk
-        project.disableStrictVersionConstraints()
-        project.setPublishProperty(androidXExtension)
+    // TODO(b/425976012): Set targetSdkForTests to project.defaultAndroidConfig.targetSdk
+    private fun KotlinMultiplatformAndroidLibraryTarget.configureTargetSdkForTests(version: Int?) {
+        checkNotNull(version) {
+            "version must be set for tests. call `configureTargetSdkForTests` in the `finalizeDsl` block"
+        }
+        compilations
+            .withType(KotlinMultiplatformAndroidDeviceTestCompilation::class.java)
+            .configureEach { it.targetSdk { this.version = release(version) } }
+
+        compilations
+            .withType(KotlinMultiplatformAndroidHostTestCompilation::class.java)
+            .configureEach { it.targetSdk { this.version = release(version.coerceAtMost(35)) } }
     }
 
     /**
@@ -1221,14 +1232,6 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
         }
     }
 
-    private fun Project.setPublishProperty(androidXExtension: AndroidXExtension) {
-        afterEvaluate {
-            if (androidXExtension.shouldRelease()) {
-                project.extra.set("publish", true)
-            }
-        }
-    }
-
     private fun LibraryExtension.configureAndroidLibraryWithMultiplatformPluginOptions() {
         sourceSets.findByName("main")!!.manifest.srcFile("src/androidMain/AndroidManifest.xml")
         sourceSets
@@ -1251,10 +1254,12 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
             kotlinTarget.compilations.configureEach { compilation ->
                 // Configure all KMP targets to allow expect/actual classes that are not stable.
                 // (see https://youtrack.jetbrains.com/issue/KT-61573)
-                compilation.compilerOptions.options.freeCompilerArgs.add("-Xexpect-actual-classes")
-                androidXConfiguration.kotlinApiVersion.let {
-                    compilation.compilerOptions.options.apiVersion.set(it)
-                    compilation.compilerOptions.options.languageVersion.set(it)
+                compilation.compileTaskProvider.configure { task ->
+                    task.compilerOptions.freeCompilerArgs.add("-Xexpect-actual-classes")
+                    androidXConfiguration.kotlinApiVersion.let {
+                        task.compilerOptions.apiVersion.set(it)
+                        task.compilerOptions.languageVersion.set(it)
+                    }
                 }
             }
         }
@@ -1262,28 +1267,26 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
 
     private fun ApplicationExtension.configureAndroidApplicationOptions(
         project: Project,
-        androidXExtension: AndroidXExtension
+        androidXExtension: AndroidXExtension,
     ) {
         defaultConfig.apply {
             versionCode = 1
             versionName = "1.0"
         }
 
-        project.configureTestConfigGeneration(this)
+        project.configureTestConfigGeneration(androidXExtension.isIsolatedProjectsEnabled())
         project.addAppApkToTestConfigGeneration(androidXExtension)
         project.addAppApkToFtlRunner()
     }
 
     private fun Project.configureDependencyVerification(
         androidXExtension: AndroidXExtension,
-        taskConfigurator: (TaskProvider<VerifyDependencyVersionsTask>) -> Unit
+        taskConfigurator: (TaskProvider<VerifyDependencyVersionsTask>) -> Unit,
     ) {
+        if (buildFeatures.isIsolatedProjectsEnabled()) return
         afterEvaluate {
-            if (androidXExtension.type !in listOf(LibraryType.UNSET, LibraryType.SAMPLES)) {
-                val verifyDependencyVersionsTask = project.createVerifyDependencyVersionsTask()
-                if (verifyDependencyVersionsTask != null) {
-                    taskConfigurator(verifyDependencyVersionsTask)
-                }
+            if (androidXExtension.type.requiresDependencyVerification()) {
+                taskConfigurator(project.createVerifyDependencyVersionsTask())
             }
         }
     }
@@ -1291,7 +1294,9 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
     // If this project wants other project in the same group to have the same version,
     // this function configures those constraints.
     private fun Project.configureConstraintsWithinGroup(androidXExtension: AndroidXExtension) {
-        if (!project.shouldAddGroupConstraints().get()) {
+        if (
+            !project.shouldAddGroupConstraints().get() || buildFeatures.isIsolatedProjectsEnabled()
+        ) {
             return
         }
         project.afterEvaluate {
@@ -1341,12 +1346,21 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
                     continue
                 }
                 // We only emit constraints referring to projects that will release
-                val otherFilepath = File(otherProject.filePath, "build.gradle")
-                val parsed = parseBuildFile(otherFilepath)
+                val otherFilepath =
+                    getSupportRootFolder().resolve(File(otherProject.filePath, "build.gradle"))
+                val parsed =
+                    if (otherFilepath.exists()) {
+                        parseBuildFile(otherFilepath)
+                    } else {
+                        parseBuildFile(
+                            getSupportRootFolder()
+                                .resolve(File(otherProject.filePath, "build.gradle.kts"))
+                        )
+                    }
                 if (!parsed.shouldRelease()) {
                     continue
                 }
-                if (parsed.libraryType == LibraryType.SAMPLES) {
+                if (parsed.softwareType == SoftwareType.SAMPLES) {
                     // a SAMPLES project knows how to publish, but we don't intend to actually
                     // publish it
                     continue
@@ -1412,8 +1426,6 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
     }
 
     companion object {
-        const val CREATE_LIBRARY_BUILD_INFO_FILES_TASK = "createLibraryBuildInfoFiles"
-        const val GENERATE_TEST_CONFIGURATION_TASK = "GenerateTestConfiguration"
         const val FINALIZE_TEST_CONFIGS_WITH_APKS_TASK = "finalizeTestConfigsWithApks"
         const val ZIP_TEST_CONFIGS_WITH_APKS_TASK = "zipTestConfigsWithApks"
 
@@ -1421,60 +1433,82 @@ constructor(private val componentFactory: SoftwareComponentFactory) : Plugin<Pro
 
         const val EXTENSION_NAME = "androidx"
 
+        // b/366238650
+        val SUPPORTED_BUILD_ABIS = listOf("armeabi-v7a", "arm64-v8a", "x86", "x86_64")
+
         /** Fail the build if a non-Studio task runs longer than expected */
         const val TASK_TIMEOUT_MINUTES = 60L
     }
 }
 
-private const val PROJECTS_MAP_KEY = "projects"
-private const val ACCESSED_PROJECTS_MAP_KEY = "accessedProjectsMap"
+internal fun getDefaultTargetJavaVersion(
+    softwareType: SoftwareType,
+    projectName: String? = null,
+    targetName: String? = null,
+): JavaVersion {
+    return when {
+        // TODO(b/353328300): Move room-compiler-processing to Java 17 once Dagger is ready.
+        projectName != null && projectName.contains("room-compiler-processing") -> VERSION_11
+        projectName != null && projectName.contains("desktop") -> VERSION_11
+        targetName != null && (targetName == "desktop" || targetName == "jvmStubs") -> VERSION_11
+        softwareType.compilationTarget == CompilationTarget.HOST -> VERSION_17
+        else -> VERSION_1_8
+    }
+}
+
+/** Must be called from a `project.afterEvaluate` block. */
+private fun Project.addTestLintK1Task(androidXExt: AndroidXExtension) {
+    if (!androidXExt.type.isLint()) {
+        return
+    }
+
+    // Make the default ":test" task use lint.use.fir.uast=true, which forces Lint tests to run
+    // using K2.
+    project.tasks.withType<Test>().named("test") { task ->
+        task.systemProperty("lint.use.fir.uast", "true")
+    }
+
+    // Add an additional test task, ":testLintK1", to run Lint tests using K1.
+    //
+    // This task is automatically included in allHostTests and configured (by JavaBasePlugin to run
+    // the Kotlin/Java tests) just by being of type `Test`; no additional code is needed, and the
+    // order (of when we register this task vs., say, allHostTests) does not matter.
+    //
+    // All AndroidX libraries target the Kotlin 2.0 language version, so AndroidX lint checks
+    // invoked via AGP will use K2. However, K1 may still be used: (a) When Lint runs in Android
+    // Studio and IntelliJ, the user can choose K1/K2 mode. (b) The developer can force AGP Lint to
+    // run via K1 for specific modules, which they might do if there are problems with K2.
+    project.tasks.register("testLintK1", Test::class.java).configure { task ->
+        task.systemProperty("lint.use.fir.uast", "false")
+    }
+    project.tasks.named("check") { task -> task.dependsOn("testLintK1") }
+}
+
+private fun Project.validateLintVersionTestExists(androidXExtension: AndroidXExtension) {
+    if (!androidXExtension.type.isLint()) {
+        return
+    }
+    kotlinExtensionOrNull?.let { extension ->
+        val projectFiles = extension.sourceSets.flatMap { it.kotlin.files }
+        // if the project doesn't define a registry it doesn't make sense to test versions
+        if (projectFiles.none { it.name.contains("Registry") }) {
+            return
+        }
+        projectFiles.find { it.name == "ApiLintVersionsTest.kt" }
+            ?: throw GradleException("Lint projects should include ApiLintVersionsTest.kt")
+    }
+}
 
 /** Returns whether the configuration is used for testing. */
 private fun Configuration.isTest(): Boolean = name.lowercase().contains("test")
 
-/**
- * Hides a project's Javadoc tasks from the output of `./gradlew tasks` by setting their group to
- * `null`.
- *
- * AndroidX projects do not use the Javadoc task for docs generation, so we don't want them
- * cluttering up the task overview.
- */
-private fun Project.hideJavadocTask() {
-    tasks.withType(Javadoc::class.java).configureEach {
-        if (it.name == "javadoc") {
-            it.group = null
-        }
-    }
-}
+/** Returns whether the configuration is part of publication. */
+internal fun Configuration.isPublished(): Boolean =
+    !isTest() && !name.lowercase().contains("metadata") && !name.endsWith("CInterop")
 
-private fun Project.addToProjectMap(androidXExtension: AndroidXExtension) {
-    // TODO(alanv): Move this out of afterEvaluate
-    afterEvaluate {
-        if (androidXExtension.shouldRelease()) {
-            val group = androidXExtension.mavenGroup?.group
-            if (group != null) {
-                val module = "$group:$name"
-
-                if (project.rootProject.extra.has(ACCESSED_PROJECTS_MAP_KEY)) {
-                    throw GradleException(
-                        "Attempted to add $project to project map after " +
-                            "the contents of the map were accessed"
-                    )
-                }
-                @Suppress("UNCHECKED_CAST")
-                val projectModules =
-                    project.rootProject.extra.get(PROJECTS_MAP_KEY)
-                        as ConcurrentHashMap<String, String>
-                projectModules[module] = path
-            }
-        }
-    }
-}
-
-val Project.androidExtension: AndroidComponentsExtension<*, *, *>
+internal val Project.androidExtension: AndroidComponentsExtension<*, *, *>
     get() =
-        extensions.findByType<LibraryAndroidComponentsExtension>()
-            ?: extensions.findByType<ApplicationAndroidComponentsExtension>()
+        extensions.findByType<KotlinMultiplatformAndroidComponentsExtension>()
             ?: throw IllegalArgumentException("Failed to find any registered Android extension")
 
 val Project.multiplatformExtension
@@ -1486,47 +1520,61 @@ val Project.kotlinExtensionOrNull: KotlinProjectExtension?
 val Project.androidXExtension: AndroidXExtension
     get() = extensions.getByType()
 
-@Suppress("UNCHECKED_CAST")
-fun Project.getProjectsMap(): ConcurrentHashMap<String, String> {
-    project.rootProject.extra.set(ACCESSED_PROJECTS_MAP_KEY, true)
-    return rootProject.extra.get(PROJECTS_MAP_KEY) as ConcurrentHashMap<String, String>
-}
-
 /**
  * Configures all non-Studio tasks in a project (see b/153193718 for background) to time out after
  * [TASK_TIMEOUT_MINUTES].
  */
 internal fun Project.configureTaskTimeouts() {
+    // A set of tasks that sometimes take >60 minutes. b/383874664
+    val slowTasks =
+        setOf(
+            ":compose:ui:ui:compileReleaseAndroidTestKotlinAndroid",
+            ":compose:foundation:foundation:compileReleaseAndroidTestKotlinAndroid",
+            ":compose:foundation:foundation:integration-tests:lazy-tests:compileReleaseAndroidTestKotlin",
+        )
     tasks.configureEach { t ->
         // skip adding a timeout for some tasks that both take a long time and
         // that we can count on the user to monitor
         if (t !is StudioTask) {
-            t.timeout.set(Duration.ofMinutes(TASK_TIMEOUT_MINUTES))
+            t.timeout.set(
+                Duration.ofMinutes(if (t.path in slowTasks) 80L else TASK_TIMEOUT_MINUTES)
+            )
         }
     }
 }
 
-private fun Project.disableJava8TargetObsoleteWarnings() {
-    afterEvaluate {
-        project.tasks.withType(JavaCompile::class.java).configureEach { task ->
-            // JDK 21 considers Java 8 an obsolete source and target value. Disable this warning.
-            task.options.compilerArgs.add("-Xlint:-options")
-        }
-    }
-}
-
-private fun Project.configureJavaCompilationWarnings(androidXExtension: AndroidXExtension) {
-    afterEvaluate {
-        project.tasks.withType(JavaCompile::class.java).configureEach { task ->
-            // If we're running a hypothetical test build confirming that tip-of-tree versions
-            // are compatible, then we're not concerned about warnings
-            if (!project.usingMaxDepVersions()) {
-                task.options.compilerArgs.add("-Xlint:unchecked")
-                if (androidXExtension.failOnDeprecationWarnings) {
-                    task.options.compilerArgs.add("-Xlint:deprecation")
-                }
+private class JavaCompileArgumentProvider(
+    private val isTestApp: Boolean,
+    private val failOnDeprecationWarnings: Provider<Boolean>,
+    private val usingMaxDepVersions: Provider<Boolean>,
+) : CommandLineArgumentProvider {
+    override fun asArguments(): List<String> {
+        // JDK 21 considers Java 8 an obsolete source and target value. Disable this warning.
+        val args = mutableListOf("-Xlint:-options")
+        // If we're running a hypothetical test build confirming that tip-of-tree versions
+        // are compatible, then we're not concerned about warnings
+        if (!usingMaxDepVersions.get() && !isTestApp) {
+            args.add("-Xlint:unchecked")
+            if (failOnDeprecationWarnings.get()) {
+                args.add("-Xlint:deprecation")
             }
         }
+        return args
+    }
+}
+
+private fun Project.configureJavaCompilationWarnings(
+    androidXExtension: AndroidXExtension,
+    isTestApp: Boolean = false,
+) {
+    project.tasks.withType(JavaCompile::class.java).configureEach { task ->
+        task.options.compilerArgumentProviders.add(
+            JavaCompileArgumentProvider(
+                isTestApp = isTestApp,
+                failOnDeprecationWarnings = androidXExtension.failOnDeprecationWarnings,
+                usingMaxDepVersions = usingMaxDepVersions(),
+            )
+        )
     }
 }
 
@@ -1591,17 +1639,11 @@ fun Project.validateProjectParser(androidXExtension: AndroidXExtension) {
     // If configuration fails, we don't want to validate the ProjectParser
     // (otherwise it could report a confusing, unnecessary error)
     project.gradle.taskGraph.whenReady {
-        if (!androidXExtension.runProjectParser) return@whenReady
-
         val parsed = project.parse()
         val errorPrefix = "ProjectParser error parsing ${project.path}."
-        check(androidXExtension.type == parsed.libraryType) {
-            "$errorPrefix Incorrectly computed libraryType = ${parsed.libraryType} " +
+        check(androidXExtension.type == parsed.softwareType) {
+            "$errorPrefix Incorrectly computed libraryType = ${parsed.softwareType} " +
                 "instead of ${androidXExtension.type}"
-        }
-        check(androidXExtension.publish == parsed.publish) {
-            "$errorPrefix Incorrectly computed publish = ${parsed.publish} " +
-                "instead of ${androidXExtension.publish}"
         }
         check(androidXExtension.shouldPublish() == parsed.shouldPublish()) {
             "$errorPrefix Incorrectly computed shouldPublish() = ${parsed.shouldPublish()} " +
@@ -1639,23 +1681,32 @@ fun AndroidXExtension.validateMavenVersion() {
     }
 }
 
-/** Workaround for https://github.com/gradle/gradle/issues/27407 */
-fun Project.workaroundPrebuiltTakingPrecedenceOverProject() {
+/** Workarounds for configuration resolution */
+fun Project.workaroundAndroidXDependencyResolutions() {
     project.configurations.configureEach { configuration ->
+        // https://github.com/gradle/gradle/issues/27407
         configuration.resolutionStrategy.preferProjectModules()
+
+        // https://github.com/gradle/gradle/issues/7594
+        configuration.resolutionStrategy.eachDependency { dependency ->
+            if (dependency.requested.group.startsWith("androidx.")) {
+                // Drop aar classifier that comes from <type>aar</type> in POM files
+                // as it causes a bug in Gradle. Gradle does not actually need the
+                // classifiers for Android libraries for them to work correctly.
+                dependency.artifactSelection { it.withoutArtifactSelectors() }
+            }
+        }
     }
 }
 
-private fun Test.configureForRobolectric() {
-    // https://github.com/robolectric/robolectric/issues/7456
-    jvmArgs =
-        listOf(
-            "--add-opens=java.base/java.lang=ALL-UNNAMED",
-            "--add-opens=java.base/java.util=ALL-UNNAMED",
-            "--add-opens=java.base/java.io=ALL-UNNAMED",
-        )
-    // Robolectric 1.7 increased heap size requirements, see b/207169653.
-    maxHeapSize = "3g"
+private fun Project.configureUnzipChromeBuildService() {
+    if (ProjectLayoutType.isPlayground(this)) {
+        return
+    }
+    gradle.sharedServices.registerIfAbsent("unzipChrome", UnzipChromeBuildService::class.java) {
+        it.parameters.browserDir.set(File(getPrebuiltsRoot(), "androidx/chrome-for-testing/"))
+        it.parameters.unzipToDir.set(getOutDirectory().resolve("chrome-bin"))
+    }
 }
 
 private fun Project.enforceBanOnVersionRanges() {
@@ -1687,8 +1738,13 @@ internal fun Project.hasAndroidMultiplatformPlugin(): Boolean =
     extensions.findByType(AndroidXMultiplatformExtension::class.java)?.hasAndroidMultiplatform()
         ?: false
 
+@Suppress("DEPRECATION")
+internal fun KotlinMultiplatformExtension.hasJavaEnabled(): Boolean =
+    targets.withType(KotlinJvmTarget::class.java).singleOrNull()?.withJavaEnabled ?: false
+
+internal fun KotlinMultiplatformExtension.hasJvmTarget(): Boolean =
+    targets.withType(KotlinJvmTarget::class.java).isEmpty().not()
+
 internal fun String.camelCase() = replaceFirstChar {
     if (it.isLowerCase()) it.titlecase() else it.toString()
 }
-
-const val PROJECT_OR_ARTIFACT_EXT_NAME = "projectOrArtifact"
